<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Assignment 1</string>

    <string-array name="array_toppings">
        <item>Tomato</item>
        <item>Mushroom</item>
        <item>Pepper</item>
        <item>Beef (Real)</item>
        <item>Pineapple</item>
        <item>Olives</item>
    </string-array>

    <string name="pizza_size_small">Small (6\")</string>
    <string name="pizza_size_medium">Medium (8\")</string>
    <string name="pizza_size_large">Large (10\")</string>
    <string name="pizza_size_xlarge">X-Large (12\")</string>

    <string-array name="array_sizes">
        <item>@string/pizza_size_small</item>
        <item>@string/pizza_size_medium</item>
        <item>@string/pizza_size_large</item>
        <item>@string/pizza_size_xlarge</item>
    </string-array>

    <string name="prompt_address">Delivery Address:</string>
    <string name="prompt_checkout">Checkout</string>
    <string name="prompt_cheese">Extra Cheese ($2)</string>
    <string name="prompt_continue">Continue</string>
    <string name="prompt_delivery">Include Delivery ($10)</string>
    <string name="prompt_instructions">Special Instructions:</string>
    <string name="prompt_name">Name:</string>
    <string name="prompt_phone">Phone Number:</string>
    <string name="prompt_size">Select Size:</string>
    <string name="prompt_toppings">Select Toppings:</string>
    <string name="prompt_fields">Please fill out all fields"</string>

    <string name="text_placeholder">Placeholder</string>
    <string name="text_slogan">\"All toppings $1 or it\'s free\"</string>

    <string name="title_pizza">Pizza Time Vegan Pizza</string>
    <string name="title_summary">Order Summary</string>
    <string name="title_summary_personal">%1$s, your order:</string>
    <string name="label_size">%1$s Pizza</string>
    <string name="label_toppings">Toppings:</string>
    <string name="label_delivery">Will be delivered to:</string>
    <string name="label_pickup">Pick up at:</string>
    <string name="label_address">Pizza Time Vegan Pizza, 123 Pizza Street</string>
    <string name="prompt_order">New Order</string>
</resources>
