<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/form_title"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_pizza"
        app:layout_constraintBottom_toTopOf="@id/form_slogan"
        app:layout_constraintLeft_toLeftOf="@id/form_pizza" />

    <TextView
        android:id="@+id/form_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/text_slogan"
        app:layout_constraintLeft_toLeftOf="@id/form_title"
        app:layout_constraintTop_toBottomOf="@id/form_title" />

    <LinearLayout
        android:id="@+id/form_pizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_slogan">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_size" />

            <Spinner
                android:id="@+id/spinner_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_toppings" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_toppings"
                style="@style/Widget.Material3.ChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true" />

        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_extras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_pizza">

        <CheckBox
            android:id="@+id/checkbox_cheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_cheese" />

        <CheckBox
            android:id="@+id/checkbox_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_delivery" />

    </LinearLayout>

    <TextView
        android:id="@+id/form_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder"
        app:layout_constraintBottom_toTopOf="@id/button_checkout"
        app:layout_constraintLeft_toLeftOf="@id/button_checkout"
        app:layout_constraintRight_toRightOf="@id/button_checkout"/>
    <Button
        android:id="@+id/button_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/prompt_checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>