<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PizzaFragment">

    <LinearLayout
        android:id="@+id/form_pizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_size" />

            <Spinner
                android:id="@+id/spinner_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_toppings" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_toppings"
                style="@style/Widget.Material3.ChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true" />

        </HorizontalScrollView>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:id="@+id/form_extras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox_cheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_cheese" />

        <CheckBox
            android:id="@+id/checkbox_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_delivery" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:id="@+id/form_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/field_instructions"
            android:text="@string/prompt_instructions" />

        <EditText
            android:id="@+id/field_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textShortMessage" />

    </LinearLayout>

</LinearLayout>